design the hero section as figma using tailwind

--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
         </div>
      </header>
      <!-- hero section  -->
-     <section class="bg-[url(./images/hero-bg.png)] bg-center bg-cover border border-transparent items-center">
-        <div class="hero-container w-5/6 mx-auto my-24 place-items-center text-center">
+     <section class="bg-[url(./images/hero-bg.png)] bg-center bg-cover border border-transparent items-center flex min-h-screen">
+        <div class="hero-container flex flex-col w-11/12 md:w-5/6 mx-auto my-24 py-16 md:py-20 place-items-center text-center">
             <div class="hero-img">
-           <div class="icon-wrapper relative w-fit m-auto">
-            <span class="new-badge">NEW</span>
-            <div class="mic">
-                <img src="./images/microphone.png" alt="">
+           <div class="relative w-fit m-auto">
+            <span class="bg-[#00FF88] text-[#1A0B2E] text-sm md:text-xl md:font-semibold px-1 md:px-4 md:py-2 rounded-[1000px] shadow-[0_0_10px_#00FF88] absolute transform translate-x-[30%] md:translate-x-[80%] translate-y-[20%] md:translate-y-[92%] ">NEW</span>
+            <div class="bg-[url(./images/hero-circle.png)] p-10  rounded-[50%] md:rounded-none md:p-28 bg-center bg-no-repeat bg-cover md:bg-contain">
+                <img src="./images/microphone.png" alt="" class="w-5 md:w-auto">
          </div>
         </div>
         </div>
-        <div class="hero-content">
-            <h1>TechWave</h1>
-            <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+        <div class="hero-content text-white">
+            <h1 class="text-3xl md:text-6xl font-bold md:font-extrabold mb-2">TechWave</h1>
+            <p class="mb-6">Your daily dose of tech insights, productivity hacks, and personal growth</p>
             <div class="btn-box">
-                <button class="btn"><i class="fa-brands fa-spotify"></i>  Listen on Spotify</button>
-                <button class="btn-2"><i class="fa-regular fa-envelope"></i>  Subscribe</button>
+                <button class="rounded-[10000px] bg-gradient-to-b from-[#9100F8] via-[#FB09B4] to-[#F7E93F] py-2 px-3 shadow-md hover:shadow-[0_0_10px_rgba(251,9,180,1)] transition"><i class="fa-brands fa-spotify"></i>  Listen on Spotify</button>
+                <button class="ml-2 px-4 py-2 border-2 border-[#00FF88] text-[#00FF88] rounded-[10000px]  active:text-[rgba(251,9,180,1)] active:border-[rgba(251,9,180,1)]"><i class="fa-regular fa-envelope"></i>  Subscribe</button>
             </div>
         </div>
         </div>
