design the about section as figma using tailwind

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
      </header>
      <!-- hero section  -->
      <section class="bg-[url(./images/hero-bg.png)] bg-center bg-cover border border-transparent items-center flex min-h-screen">
-        <div class="hero-container flex flex-col w-11/12 md:w-5/6 mx-auto my-24 py-16 md:py-20 place-items-center text-center">
+        <div class="hero-container flex flex-col w-11/12 md:w-5/6 mx-auto my-24 py-1 md:py-20 place-items-center text-center">
             <div class="hero-img">
            <div class="relative w-fit m-auto">
             <span class="bg-[#00FF88] text-[#1A0B2E] text-sm md:text-xl md:font-semibold px-1 md:px-4 md:py-2 rounded-[1000px] shadow-[0_0_10px_#00FF88] absolute transform translate-x-[30%] md:translate-x-[80%] translate-y-[20%] md:translate-y-[92%] ">NEW</span>
@@ -53,29 +53,29 @@
         </div>
      </section>
      <!-- about section  -->
-     <section class="about">
-        <div class="about container">
-            <div class="about-content">
-                <h2>About the Podcast</h2>
-                <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. <br> We break down complex topics into digestible insights, explore productivity strategies that actually work, <br>and share stories of personal growth from industry leaders.</p>
-                <p>Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+     <section class="bg-[#1A0B2E]">
+        <div class=" mx-2.5 md:mx-auto">
+            <div class="text-center text-white">
+                <h2 class=" text-3xl md:text-5xl font-extrabold mb-4">About the Podcast</h2>
+                <p class="text-base mb-11">TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. <br> We break down complex topics into digestible insights, explore productivity strategies that actually work, <br>and share stories of personal growth from industry leaders.</p>
+                <p class="text-base mb-11">Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
             </div>
-            <hr>
-            <div class="rate">
-                <div>
-                <h1>150K+</h1>
-                <p>Monthly Listeners</p>
+            <hr class="h-px border-0 bg-[rgba(255,255,255,0.089)]">
+            <div class=" my-10 md:my-20 w-5/6 mx-auto lg:mx-[250px] text-white grid grid-cols-2 md:grid-cols-4 gap-3.5 md:gap-0 ">
+                <div class="md:ml-8 md:mr-0.5">
+                <h1 class="text-2xl md:text-4xl text-[#00FF88] font-bold mb-4">150K+</h1>
+                <p class="mb-14">Monthly Listeners</p>
                 </div>
-                <div>
-                <h1>200+</h1>
+                <div class="md:ml-8 md:mr-0.5">
+                <h1 class="text-2xl md:text-4xl text-[#00FF88] font-bold mb-4">200+</h1>
                 <p>Episodes Published</p>
                 </div>
-                <div>
-                <h1>4.9<i class="fa-solid fa-star"></i></h1>
+                <div class="md:ml-8 md:mr-0.5">
+                <h1 class="text-2xl md:text-4xl text-[#00FF88] font-bold mb-4">4.9<i class="fa-solid fa-star text-2xl ml-0.5"></i></h1>
                 <p>Average Rating</p>
                 </div>
-                <div>
-                <h1>50+</h1>
+                <div class="md:ml-8 md:mr-0.5">
+                <h1 class="text-2xl md:text-4xl text-[#00FF88] font-bold mb-4">50+</h1>
                 <p>Industry Experts</p>
                 </div>
             </div>
