style card section with responsive

--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
                 <p class="text-base mb-11">Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
             </div>
             <hr class="h-px border-0 bg-[rgba(255,255,255,0.089)]">
-            <div class=" my-10 md:my-20 w-5/6 mx-auto lg:mx-[250px] text-white grid grid-cols-2 md:grid-cols-4 gap-3.5 md:gap-0 ">
+            <div class="py-10 md:py-20  w-5/6 mx-auto lg:mx-[200px] text-white grid grid-cols-2 md:grid-cols-4 gap-3.5 md:gap-0 ">
                 <div class="md:ml-8 md:mr-0.5">
                 <h1 class="text-2xl md:text-4xl text-[#00FF88] font-bold mb-4">150K+</h1>
-                <p class="mb-14">Monthly Listeners</p>
+                <p class="">Monthly Listeners</p>
                 </div>
                 <div class="md:ml-8 md:mr-0.5">
                 <h1 class="text-2xl md:text-4xl text-[#00FF88] font-bold mb-4">200+</h1>
                 <p>Episodes Published</p>
                 </div>
                 <div class="md:ml-8 md:mr-0.5">
-                <h1 class="text-2xl md:text-4xl text-[#00FF88] font-bold mb-4">4.9<i class="fa-solid fa-star text-2xl ml-0.5"></i></h1>
+                <h1 class="text-2xl md:text-4xl text-[#00FF88] font-bold mb-4">4.9<i class="fa-solid fa-star text-2xl ml-1.5"></i></h1>
                 <p>Average Rating</p>
                 </div>
                 <div class="md:ml-8 md:mr-0.5">
@@ -82,33 +82,38 @@
         </div>
      </section>
      <!-- why choose section -->
-      <section id="why">
-        <div class="why-container">
-            <div class="why-content"><h2>Why Choose TechWave</h2></div>
-            <div class="card-container">
-                <div class="card" id="card-1">
-                    <img src="./images/headphone.png" alt="">
-                    <h4>Premium Audio Quality</h4>
+      <section id="why" class="bg-[#230E3D]">
+        <div class="py-9 md:py-28 px-auto">
+            <div class="text-white text-center"><h2 class="text-3xl font-bold mb-9">Why Choose TechWave</h2></div>
+            <div class=" mx-9 lg:mx-48 grid grid-cols-1 grid-rows-1 md:grid-cols-3 md:grid-rows-3 gap-5 md:gap-7">
+                <!-- card-1 -->
+                <div class="bg-[rgba(53,17,101,0.4)] p-10 rounded-4xl text-left text-white col-span-1 row-span-2">  
+                    <img src="./images/headphone.png" alt="" class="md:mt-14">
+                    <h4 class="font-semibold text-2xl my-2.5">Premium Audio Quality</h4>
                     <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
                 </div>
-                <div class="card" id="card-2">
+                <!-- card-2  -->
+                <div class="bg-[rgba(53,17,101,0.4)] p-10 rounded-4xl text-left text-white row-span-1 col-span-2">
                     <img src="./images/device.png" alt="">
-                    <h4>Mobile Friendly</h4>
+                    <h4 class="font-semibold text-2xl my-2.5">Mobile Friendly</h4>
                     <p>Listen on the go with seamless mobile experience and offline downloads</p>
                 </div>
-                <div class="card" id="card-3">
+                <!-- card-3  -->
+                <div class="bg-[rgba(53,17,101,0.4)] p-10 rounded-4xl text-left text-white row-span-1 col-span-2">
                     <img src="./images/location.png" alt="">
-                    <h4>Global Community</h4>
+                    <h4 class="font-semibold text-2xl my-2.5">Global Community</h4>
                     <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
                 </div>
-                <div class="card" id="card-4">
+                <!-- card-4 -->
+                <div class="bg-[rgba(53,17,101,0.4)] p-10 rounded-4xl text-left text-white row-span-1 col-span-2">
                     <img src="./images/zap-fast.png" alt="">
-                    <h4>Exclusive Interviews</h4>
+                    <h4 class="font-semibold text-2xl my-2.5">Exclusive Interviews</h4>
                     <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
                 </div>
-                <div class="card" id="card-5">
+                <!-- card-5 -->
+                <div class="bg-[rgba(53,17,101,0.4)] p-10 rounded-4xl text-left text-white row-span-1 col-span-1">
                     <img src="./images/resource.png" alt="">
-                    <h4>Rich Resources</h4>
+                    <h4 class="font-semibold text-2xl my-2.5">Rich Resources</h4>
                     <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
                 </div>
             </div>
