--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
      <!-- why choose section -->
       <section id="why" class="bg-[#230E3D]">
         <div class="py-9 md:py-28 px-auto">
-            <div class="text-white text-center"><h2 class="text-3xl font-bold mb-9">Why Choose TechWave</h2></div>
+            <div class="text-white text-center"><h2 class="text-3xl md:text-5xl font-bold mb-9">Why Choose TechWave</h2></div>
             <div class=" mx-9 lg:mx-48 grid grid-cols-1 grid-rows-1 md:grid-cols-3 md:grid-rows-3 gap-5 md:gap-7">
                 <!-- card-1 -->
                 <div class="bg-[rgba(53,17,101,0.4)] p-10 rounded-4xl text-left text-white col-span-1 row-span-2">  
@@ -120,47 +120,49 @@
         </div>
       </section>
       <!-- features section  -->
-       <section class="features">
-        <div class="features-container">
-            <div class="episodes">
-                <div class="episodes-heading"><h2>Featured Episodes</h2></div>
-                <div class="eposodes-content">
-                    <div>
-                       <iframe width="560" height="315" src="https://www.youtube.com/embed/lT9rTUxJY-A?si=Ke0IQVVrTWNEO1v7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                       <h3>The Future of AI in Everyday Life</h3>
-                       <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
-                       <h4><i class="fa-solid fa-circle-play"></i> 42 min</h4>
+        <section class="bg-[#1A0B2E]">
+        <div class="pt-9 pb-9 md:pt-20 md:pb-20 text-center text-white">
+            <div class="m-8">
+                <div class="episodes-heading"><h2 class="text-3xl md:text-5xl font-extrabold mb-20">Featured Episodes</h2></div>
+                <div class="grid grid-cols-1 md:grid-cols-3 text-center justify-center mx-auto gap-11 md:w-5/6">
+                    <div class="bg-[#230E3D] rounded-[40px] text-left">
+                       <iframe class="rounded-t-[40px]" width="100%" height="315" src="https://www.youtube.com/embed/lT9rTUxJY-A?si=Ke0IQVVrTWNEO1v7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                       <h3 class="text-2xl font-bold my-4 pl-3">The Future of AI in Everyday Life</h3>
+                       <p class="my-4 pl-4 w-4/5">Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                       <h4 class="my-4 pl-4 w-4/5 text-xl text-[#00FF88] font-bold"><i class="fa-solid fa-circle-play"></i> 42 min</h4>
                     </div>
-                    <div>
-                       <iframe width="560" height="315" src="https://www.youtube.com/embed/t4VR0wrnNQs?si=GQCHZeh5kNcZlCNK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                       <h3>Building Better Habits for Remote Work</h3>
-                       <p>Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
-                       <h4><i class="fa-solid fa-circle-play"></i> 35 min</h4>
+                    <div class="bg-[#230E3D] rounded-[40px] text-left">
+                       <iframe class="rounded-t-[40px]" width="100%" height="315" src="https://www.youtube.com/embed/t4VR0wrnNQs?si=GQCHZeh5kNcZlCNK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                       <h3 class="text-2xl font-bold my-4 pl-4">Building Better Habits for Remote Work</h3>
+                       <p class="my-4 pl-4 w-4/5">Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+                       <h4 class="my-4 pl-4 w-4/5 text-xl text-[#00FF88] font-bold"><i class="fa-solid fa-circle-play"></i> 35 min</h4>
                     </div>
-                    <div>
-                       <iframe width="560" height="315" src="https://www.youtube.com/embed/lT9rTUxJY-A?si=Ke0IQVVrTWNEO1v7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                       <h3>Career Growth in Tech: A Roadmap</h3>
-                       <p>Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
-                       <h4><i class="fa-solid fa-circle-play"></i> 51 min</h4>
+                    <div class="bg-[#230E3D] rounded-[40px] text-left">
+                       <iframe class="rounded-t-[40px]" width="100%" height="315" src="https://www.youtube.com/embed/lT9rTUxJY-A?si=Ke0IQVVrTWNEO1v7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                       <h3 class="text-2xl font-bold my-4 pl-4">Career Growth in Tech: A Roadmap</h3>
+                       <p class="my-4 pl-4 w-4/5">Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+                       <h4 class="my-4 pl-4 w-4/5 text-xl text-[#00FF88] font-bold"><i class="fa-solid fa-circle-play"></i> 51 min</h4>
                     </div>
                 </div>
             </div>
-            <div class="meet">
-                <div class="meet-heading">
-                    <h2>Meet the Host</h2>
+        </section>
+        <section class="bg-[#1A0B2E] ">
+            <div class="justify-center">
+                <div class="text-center text-white">
+                    <h2 class="text-3xl md:text-5xl font-bold mb-10">Meet the Host</h2>
                 </div>
-                <div class="meet-card">
-                    <div class="meet-img">
-                        <img src="./images/host.png" alt="">
+                <div class=" flex flex-col md:flex-row bg-[#230E3D] mx-8 md:mx-52 p-10">
+                    <div class="meet-img w-full w-5/6 ml-28 md:ml-6">
+                        <img src="./images/host.png" alt="" >
                     </div>
-                    <div class="meet-content">
-                        <h3>Alex Kumar</h3>
-                        <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
-                        <div class="icons">
-                            <img src="./images/linkedin.png" alt="">
-                            <img src="./images/instagram.png" alt="">
-                            <img src="./images/x.png" alt="">
-                            <img src="./images/youtube.png" alt="">
+                    <div class="text-center md:text-left  mt-4 place-content-center text-white">
+                        <h3 class="text-3xl font-bold mb-4">Alex Kumar</h3>
+                        <p class="mb-4">Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+                        <div class="flex justify-center md:justify-start">
+                            <img src="./images/linkedin.png" alt="" class="mr-4 p-3.5 border border-[#FB09B4] rounded-[50%]">
+                            <img src="./images/instagram.png" alt="" class="mr-4 p-3 border border-[#FB09B4] rounded-[50%]">
+                            <img src="./images/x.png" alt="" class="mr-4 p-3 border border-[#FB09B4] rounded-[50%]">
+                            <img src="./images/youtube.png" alt="" class="mr-4 p-3 border border-[#FB09B4] rounded-[50%]">
                         </div>
                     </div>
                 </div>
