--- a/index.html
+++ b/index.html
@@ -146,14 +146,14 @@
                 </div>
             </div>
         </section>
-        <section class="bg-[#1A0B2E] ">
+        <section class="bg-[#1A0B2E] pb-11">
             <div class="justify-center">
                 <div class="text-center text-white">
                     <h2 class="text-3xl md:text-5xl font-bold mb-10">Meet the Host</h2>
                 </div>
                 <div class=" flex flex-col md:flex-row bg-[#230E3D] mx-8 md:mx-52 p-10">
-                    <div class="meet-img w-full w-5/6 ml-28 md:ml-6">
-                        <img src="./images/host.png" alt="" >
+                    <div class="meet-img w-full w-5/6 sm:ml-28 ml-0 md:ml-6">
+                        <img src="./images/host.png" alt="" class="justify-self-center" >
                     </div>
                     <div class="text-center md:text-left  mt-4 place-content-center text-white">
                         <h3 class="text-3xl font-bold mb-4">Alex Kumar</h3>
@@ -170,24 +170,24 @@
         </div>
        </section>
        <!-- footer section  -->
-       <footer>
-        <div class="footer">
-            <img src="./images/TechWave.png" alt="">
-            <div class="socials">
-                <div>
-                    <img src="./images/spotify.png" alt="">
+       <footer class="bg-[url(./images/footer-bg.png)] bg-center bg-cover bg-no-repeat">
+        <div class="py-20 md:px-36 text-center text-white justify-self-center">
+            <img src="./images/TechWave.png" alt="" class="ml-5  justify-self-center">
+            <div class="grid grid-cols-2 md:grid-cols-4 mt-6 gap-2.5 md:gap-0 mb-4 justify-self-center text-center">
+                <div class="flex">
+                    <img src="./images/spotify.png" alt="" class="mr-2">
                     <p>Spotify</p>
                 </div>
-                <div>
-                    <img src="./images/apple-podcast.png" alt="">
+                <div class="flex">
+                    <img src="./images/apple-podcast.png" alt="" class="mr-2 ">
                     <p>Apple Podcasts</p>
                 </div>
-                <div>
-                    <img src="./images/youtube-podcast.png" alt="">
+                <div class="flex">
+                    <img src="./images/youtube-podcast.png" alt="" class="mr-2">
                     <p>YouTube</p>
                 </div>
-                <div>
-                    <img src="./images/twitter.png" alt="">
+                <div class="flex">
+                    <img src="./images/twitter.png" alt="" class="mr-2">
                     <p>Twitter</p>
                 </div>
             </div>
