added a margin in socials

--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
                     <img src="./images/spotify.png" alt="" class="mr-2">
                     <p>Spotify</p>
                 </div>
-                <div class="flex">
-                    <img src="./images/apple-podcast.png" alt="" class="mr-2 ">
+                <div class="flex mr-4">
+                    <img src="./images/apple-podcast.png" alt="" class="mr-2">
                     <p>Apple Podcasts</p>
                 </div>
                 <div class="flex">
