change the margin in hero content

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                 </ul>
             </nav>
             <button class="hidden md:block rounded-[10000px] bg-gradient-to-b from-[#9100F8] via-[#FB09B4] to-[#F7E93F] py-2 px-3 shadow-md hover:shadow-[0_0_10px_rgba(251,9,180,1)] transition">Subscribe <i class="fa-solid fa-arrow-right"></i></button>
-            <button class="md:hidden"><img src="./images/hamburger-menu.png" alt=""></button>
+            <button class="md:hidden mt-2 md:mt-0"><img src="./images/hamburger-menu.png" alt=""></button>
              </div>
         </div>
      </header>
      <!-- hero section  -->
-     <section class="bg-[url(./images/hero-bg.png)] bg-center bg-cover border border-transparent items-center flex min-h-screen">
+     <section class="bg-[url(./images/hero-bg.png)] bg-center bg-cover  bg-no-repeat  items-center flex min-h-screen">
         <div class="hero-container flex flex-col w-11/12 md:w-5/6 mx-auto my-24 py-1 md:py-20 place-items-center text-center">
             <div class="hero-img">
            <div class="relative w-fit m-auto">
@@ -43,8 +43,8 @@
         </div>
         </div>
         <div class="hero-content text-white">
-            <h1 class="text-3xl md:text-6xl font-bold md:font-extrabold mb-2">TechWave</h1>
-            <p class="mb-6">Your daily dose of tech insights, productivity hacks, and personal growth</p>
+            <h1 class="mt-3 text-3xl md:text-6xl font-bold md:font-extrabold mb-2">TechWave</h1>
+            <p class="mb-6 mt-3">Your daily dose of tech insights, productivity hacks, and personal growth</p>
             <div class="btn-box">
                 <button class="rounded-[10000px] bg-gradient-to-b from-[#9100F8] via-[#FB09B4] to-[#F7E93F] py-2 px-3 shadow-md hover:shadow-[0_0_10px_rgba(251,9,180,1)] transition"><i class="fa-brands fa-spotify"></i>  Listen on Spotify</button>
                 <button class="ml-2 px-4 py-2 border-2 border-[#00FF88] text-[#00FF88] rounded-[10000px]  active:text-[rgba(251,9,180,1)] active:border-[rgba(251,9,180,1)]"><i class="fa-regular fa-envelope"></i>  Subscribe</button>
@@ -170,7 +170,7 @@
         </div>
        </section>
        <!-- footer section  -->
-       <footer class="bg-[url(./images/footer-bg.png)] bg-center bg-cover bg-no-repeat">
+       <footer class="bg-[url(./images/footer-bg.png)] bg-[#230E3D] bg-center bg-cover bg-no-repeat">
         <div class="py-20 md:px-36 text-center text-white justify-self-center">
             <img src="./images/TechWave.png" alt="" class="ml-5  justify-self-center">
             <div class="grid grid-cols-2 md:grid-cols-4 mt-6 gap-2.5 md:gap-0 mb-4 justify-self-center text-center">
