added animation in new badge

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="hero-container flex flex-col w-11/12 md:w-5/6 mx-auto my-24 py-1 md:py-20 place-items-center text-center">
             <div class="hero-img">
            <div class="relative w-fit m-auto">
-            <span class="bg-[#00FF88] text-[#1A0B2E] text-sm md:text-xl md:font-semibold px-1 md:px-4 md:py-2 rounded-[1000px] shadow-[0_0_10px_#00FF88] absolute transform translate-x-[30%] md:translate-x-[80%] translate-y-[20%] md:translate-y-[92%] ">NEW</span>
+            <span class="bg-[#00FF88] text-[#1A0B2E] text-sm md:text-xl md:font-semibold px-1 md:px-4 md:py-2 rounded-[1000px] shadow-[0_0_10px_#00FF88] absolute transform translate-x-[30%] md:translate-x-[80%] translate-y-[20%] md:translate-y-[92%] animate-bounce ">NEW</span>
             <div class="bg-[url(./images/hero-circle.png)] p-11  rounded-[50%] md:rounded-none md:p-28 bg-center bg-no-repeat bg-cover md:bg-contain">
                 <img src="./images/microphone.png" alt="" class="w-7 md:w-auto">
          </div>
