--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <div class="hero-content text-white">
             <h1 class="mt-3 text-3xl md:text-6xl font-bold md:font-extrabold mb-2">TechWave</h1>
             <p class="mb-6 mt-3">Your daily dose of tech insights, productivity hacks, and personal growth</p>
-            <div class="btn-box">
-                <button class="rounded-[10000px] bg-gradient-to-b from-[#9100F8] via-[#FB09B4] to-[#F7E93F] py-2 px-3 shadow-md hover:shadow-[0_0_10px_rgba(251,9,180,1)] transition"><i class="fa-brands fa-spotify"></i>  Listen on Spotify</button>
-                <button class="ml-2 px-4 py-2 border-2 border-[#00FF88] text-[#00FF88] rounded-[10000px]  active:text-[rgba(251,9,180,1)] active:border-[rgba(251,9,180,1)]"><i class="fa-regular fa-envelope"></i>  Subscribe</button>
+            <div class="flex justify-center gap-2">
+                <button class="rounded-[10000px] bg-gradient-to-b from-[#9100F8] via-[#FB09B4] to-[#F7E93F] py-1 px-1 sm:py-2 sm:px-3 shadow-md hover:shadow-[0_0_10px_rgba(251,9,180,1)] transition"><i class="fa-brands fa-spotify"></i>  Listen on Spotify</button>
+                <button class="ml-1 px-4 py-2 border-2 border-[#00FF88] text-[#00FF88] rounded-[10000px]  active:text-[rgba(251,9,180,1)] active:border-[rgba(251,9,180,1)]"><i class="fa-regular fa-envelope"></i>  Subscribe</button>
             </div>
         </div>
         </div>
