added pseudo-cls in nav

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <div class=""><img src="./images/TechWave.png" alt=""></div>
             <nav class="hidden md:block ">
                 <ul class="flex justify-between gap-8 list-none">
-                    <li><a href="#" class="text-base hover:underline hover:underline-offset-4">About</a></li>
-                    <li><a href="#" class="text-base hover:underline hover:underline-offset-4">Episodes</a></li>
-                    <li><a href="#" class="text-base hover:underline hover:underline-offset-4">Host</a></li>
+                    <li><a href="#" class="text-base hover:underline hover:underline-offset-4 active:text-[#FB09B4]">About</a></li>
+                    <li><a href="#" class="text-base hover:underline hover:underline-offset-4 active:text-[#FB09B4]">Episodes</a></li>
+                    <li><a href="#" class="text-base hover:underline hover:underline-offset-4 active:text-[#FB09B4]">Host</a></li>
                 </ul>
             </nav>
             <button class="hidden md:block rounded-[10000px] bg-gradient-to-b from-[#9100F8] via-[#FB09B4] to-[#F7E93F] py-2 px-3 shadow-md hover:shadow-[0_0_10px_rgba(251,9,180,1)] transition">Subscribe <i class="fa-solid fa-arrow-right"></i></button>
