--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         </div>
      </header>
      <!-- hero section  -->
-     <section class="bg-[url(./images/hero-bg.png)] bg-center bg-cover  bg-no-repeat  items-center flex min-h-screen">
+     <section class="bg-[url(./images/Image.png)] md:bg-[url(./images/hero-bg.png)] bg-center bg-cover  bg-no-repeat  items-center flex min-h-screen">
         <div class="hero-container flex flex-col w-11/12 md:w-5/6 mx-auto my-24 py-1 md:py-20 place-items-center text-center">
             <div class="hero-img">
            <div class="relative w-fit m-auto">
             <span class="bg-[#00FF88] text-[#1A0B2E] text-sm md:text-xl md:font-semibold px-1 md:px-4 md:py-2 rounded-[1000px] shadow-[0_0_10px_#00FF88] absolute transform translate-x-[30%] md:translate-x-[80%] translate-y-[20%] md:translate-y-[92%] animate-bounce ">NEW</span>
-            <div class="bg-[url(./images/hero-circle.png)] p-11  rounded-[50%] md:rounded-none md:p-28 bg-center bg-no-repeat bg-cover md:bg-contain">
+            <div class="bg-[url(./images/micbg.png)] md:bg-[url(./images/hero-circle.png)] p-12   md:rounded-none md:p-28 bg-center bg-no-repeat bg-contain">
                 <img src="./images/microphone.png" alt="" class="w-7 md:w-auto">
          </div>
         </div>
@@ -54,7 +54,7 @@
      </section>
      <!-- about section  -->
      <section class="bg-[#1A0B2E]">
-        <div class=" mx-2.5 md:mx-auto">
+        <div class="pt-9 md:pt-0 mx-2.5 md:mx-auto">
             <div class="text-center text-white">
                 <h2 class=" text-3xl md:text-5xl font-extrabold mb-9">About the Podcast</h2>
                 <p class="text-base mb-11">TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. <br> We break down complex topics into digestible insights, explore productivity strategies that actually work, <br>and share stories of personal growth from industry leaders.</p>
@@ -170,24 +170,24 @@
         </div>
        </section>
        <!-- footer section  -->
-       <footer class="bg-[url(./images/footer-bg.png)] bg-[#230E3D] bg-center bg-cover bg-no-repeat">
-        <div class="py-20 md:px-36 text-center text-white justify-self-center">
+       <footer class="bg-[url(./images/footer2.png)] md:bg-[url(./images/footer-bg.png)] bg-[#230E3D] bg-center bg-contain bg-no-repeat">
+        <div class="py-20 px-6 md:px-36 text-center text-white justify-self-center">
             <img src="./images/TechWave.png" alt="" class="ml-5  justify-self-center">
-            <div class="grid grid-cols-2 md:grid-cols-4 mt-6 gap-2.5 md:gap-0 mb-4 justify-self-center text-center">
+            <div class="px-9 md:px-0 grid grid-cols-2 md:grid-cols-4 mt-6 gap-2.5 md:gap-6 mb-4 justify-self-center text-center">
                 <div class="flex">
-                    <img src="./images/spotify.png" alt="" class="mr-2">
+                    <img src="./images/spotify.png" alt="" class="mr-2 h-5">
                     <p>Spotify</p>
                 </div>
-                <div class="flex mr-4">
-                    <img src="./images/apple-podcast.png" alt="" class="mr-2">
+                <div class="flex">
+                    <img src="./images/apple-podcast.png" alt="" class="mr-2 h-5">
                     <p>Apple Podcasts</p>
                 </div>
                 <div class="flex">
-                    <img src="./images/youtube-podcast.png" alt="" class="mr-2">
+                    <img src="./images/youtube-podcast.png" alt="" class="mr-2 h-5">
                     <p>YouTube</p>
                 </div>
                 <div class="flex">
-                    <img src="./images/twitter.png" alt="" class="mr-2">
+                    <img src="./images/twitter.png" alt="" class="mr-2 h-5">
                     <p>Twitter</p>
                 </div>
             </div>
